--- a/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
+++ b/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
@@ -44,14 +44,14 @@
     </mat-card-header>
     
     <mat-card-content>
-        <p>Nos duele que continue con el proceso de eliminación de cuenta.</p>
+        <p style="padding-bottom: 12px;">Nos duele que continúe con el proceso de eliminación de cuenta.</p>
 
-        <p>Es importante enfatizar en las implicaciones de eliminar la cuenta, que se listan a continuación:</p>
+        <p style="padding-bottom: 12px;">Es importante enfatizar en las implicaciones de eliminar la cuenta, que se listan a continuación:</p>
         
         <ul>
             <li>Irreversibilidad: al eliminarse la cuenta, esta no podrá ser restaurada ya que la información asociada ha sido eliminada.</li>
             <li>Pérdida de datos: al eliminarse la cuenta, la información personal asociada a la cuenta, los datos asociados a la aplicación y la personalización de la aplicación tanto web como móvil serán todos eliminados.</li>
-            <li>Acceso y uso de la aplicación móvil: el acceso y uso de la aplicación móvil no será posible una vez la cuenta haya sido eliminada.</li>
+            <li style="padding-bottom: 8px !important;">Acceso y uso de la aplicación móvil: el acceso y uso de la aplicación móvil no será posible una vez la cuenta haya sido eliminada.</li>
         </ul>
         
         <p>Si entiende y está de acuerdo con asumir las implicaciones ya mencionadas entonces por favor digite su contraseña como muestra de confirmación para eliminar la cuenta.</p>
