--- a/web/maqueta-web/src/app/report/report.component.css
+++ b/web/maqueta-web/src/app/report/report.component.css
@@ -86,3 +86,8 @@ mat-card{
             width: 160px;
             height: 40px;
         }
+
+        .image-button {
+            display: inline-block; /* Adjust as necessary */
+            cursor: pointer;
+          }
