--- a/web/maqueta-web/src/app/report-detail/report-detail.component.html
+++ b/web/maqueta-web/src/app/report-detail/report-detail.component.html
@@ -1,34 +1,40 @@
 <div class="navbar">
     <mat-list>
       <mat-list-item>
-        <img mat-card-image 
-          src="assets/images/menuIcon.png" 
-          alt="menu"
-          id="menuIcon"
-        />
+        <a [routerLink]="['/report']" class="image-button">
+          <img mat-card-image 
+            src="assets/images/menuIcon.png" 
+            alt="menu"
+            id="menuIcon"
+          />
+        </a>
       </mat-list-item>
       <mat-list-item>
-        <img mat-card-image 
-          src="assets/images/userSettingsIcon.png" 
-          alt="user settings"
-          id="userSettingsIcon"
-        />
+        <a [routerLink]="['/user-settings']" class="image-button">
+          <img mat-card-image 
+            src="assets/images/userSettingsIcon.png" 
+            alt="user settings"
+            id="userSettingsIcon"
+          />
+        </a>
       </mat-list-item>
       <div class="text-container">
         <div class="overlay-text">Gestión Cuenta</div>
       </div>
       <mat-list-item>
-        <img mat-card-image 
-          src="assets/images/closeSessionIcon.png" 
-          alt="close session"
-          id="closeSessionIcon"
-        />
+        <a [routerLink]="['/login']" class="image-button">
+          <img mat-card-image 
+            src="assets/images/closeSessionIcon.png" 
+            alt="close session"
+            id="closeSessionIcon"
+          />
+        </a>
       </mat-list-item>
       <div class="text-container">
         <div class="overlay-text">Cerrar Sesión</div>
       </div>
     </mat-list>
-</div>
+  </div>
 
 <mat-card class="alertifyTitle">
     <img
