--- a/web/maqueta-web/src/app/signin/signin.component.html
+++ b/web/maqueta-web/src/app/signin/signin.component.html
@@ -73,7 +73,7 @@
                 </mat-form-field>
             </div>
             <div>
-                <button mat-button formControlName="signinButton" class="signinButton">
+                <button mat-button (click)="navigateToLogIn()" formControlName="signinButton" class="signinButton">
                     <mat-label class="buttonLabel">Crear cuenta</mat-label>
                 </button>
             </div>
