--- a/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
+++ b/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
@@ -1,33 +1,39 @@
 <div class="navbar">
-    <mat-list>
-      <mat-list-item>
+  <mat-list>
+    <mat-list-item>
+      <a [routerLink]="['/report']" class="image-button">
         <img mat-card-image 
           src="assets/images/menuIcon.png" 
           alt="menu"
           id="menuIcon"
         />
-      </mat-list-item>
-      <mat-list-item>
+      </a>
+    </mat-list-item>
+    <mat-list-item>
+      <a [routerLink]="['/user-settings']" class="image-button">
         <img mat-card-image 
           src="assets/images/userSettingsIcon.png" 
           alt="user settings"
           id="userSettingsIcon"
         />
-      </mat-list-item>
-      <div class="text-container">
-        <div class="overlay-text">Gestión Cuenta</div>
-      </div>
-      <mat-list-item>
+      </a>
+    </mat-list-item>
+    <div class="text-container">
+      <div class="overlay-text">Gestión Cuenta</div>
+    </div>
+    <mat-list-item>
+      <a [routerLink]="['/login']" class="image-button">
         <img mat-card-image 
           src="assets/images/closeSessionIcon.png" 
           alt="close session"
           id="closeSessionIcon"
         />
-      </mat-list-item>
-      <div class="text-container">
-        <div class="overlay-text">Cerrar Sesión</div>
-      </div>
-    </mat-list>
+      </a>
+    </mat-list-item>
+    <div class="text-container">
+      <div class="overlay-text">Cerrar Sesión</div>
+    </div>
+  </mat-list>
 </div>
 
 <mat-card class="alertifyTitle">
@@ -78,10 +84,10 @@
             </mat-card-content>
         </form>
         <div class="buttonContainer">
-            <button mat-button class="generalButton" id="deleteButton">
+            <button mat-button (click)="navigateToLogIn()" class="generalButton" id="deleteButton">
                 <mat-label>Eliminar Cuenta</mat-label>
             </button>
-            <button mat-button class="generalButton" id="cancelButton">
+            <button mat-button (click)="navigateToUserSettings()" class="generalButton" id="cancelButton">
                 <mat-label>Cancelar</mat-label>
             </button>
         </div>
