Web-013: se agregan animación de botón para login.

--- a/web/maqueta-web/src/app/login/login.component.html
+++ b/web/maqueta-web/src/app/login/login.component.html
@@ -73,3 +73,7 @@
         </div>
     </mat-card-content>
 </mat-card>
+
+<div *ngIf="isOverlayVisible" class="overlay">
+    <img src="assets/images/loginSuccess.png" alt="Overlay Image" />
+</div>
