Web-014: se agregan animación de botón para signin.

--- a/web/maqueta-web/src/app/signin/signin.component.html
+++ b/web/maqueta-web/src/app/signin/signin.component.html
@@ -80,3 +80,7 @@
         </mat-card-content>
     </form>
 </mat-card>
+
+<div *ngIf="isOverlayVisible" class="overlay">
+    <img src="assets/images/loginSuccess.png" alt="Overlay Image" />
+</div>
