--- a/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
+++ b/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
@@ -93,3 +93,7 @@
         </div>
     </mat-card-content>
 </mat-card>
+
+<div *ngIf="isOverlayVisible" class="overlay">
+  <img src="assets/images/loginSuccess.png" alt="Overlay Image" />
+</div>
