Web-016: se agregan animación de botón para gestión de usuario.

--- a/web/maqueta-web/src/app/user-settings/user-settings.component.html
+++ b/web/maqueta-web/src/app/user-settings/user-settings.component.html
@@ -142,3 +142,7 @@
         </button>
     </div>
 </mat-card>
+
+<div *ngIf="isOverlayVisible" class="overlay">
+    <img src="assets/images/loginSuccess.png" alt="Overlay Image" />
+  </div>
