--- a/web/maqueta-web/src/app/user-settings/user-settings.component.css
+++ b/web/maqueta-web/src/app/user-settings/user-settings.component.css
@@ -182,3 +182,21 @@ button.generalButton{
             background-color: #6D9D99 !important;
             color: #fff !important;
         }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000; /* Ensure it appears above other content */
+        }
+        
+        .overlay img {
+        max-width: 15%;
+        max-height: 15%;
+        }
